# luma

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md  config.example.toml  install.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  DISTRIBUTION.md  TESTING.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/fedora/: lumalock.spec
pam/: luma
scripts/: create-vendor-archive.sh  install-user.sh  test-nested-lock.sh
src/: auth.rs  cli.rs  daemon.rs  demo.rs  input.rs  main.rs  state.rs
src/auth/: worker.rs
src/config/: color.rs  load.rs  mod.rs  model.rs
src/renderer/: background.rs  mod.rs  text.rs
src/wayland/: capabilities.rs  capture.rs  mod.rs  opaque.rs  outputs.rs  smoke.rs
